@@ -1,12 +1,14 @@
 package com.cn.jmw.processor.datasource.jdbc.adapter;
 
-import com.cn.jmw.pojo.SQLQueryMontage;
+import com.cn.jmw.pojo.SqlQueryMontage;
 import com.cn.jmw.pojo.SampleResult;
-import com.cn.jmw.processor.datasource.JDBCAdapter;
+import com.cn.jmw.processor.datasource.AbstractJdbcAdapter;
+import com.cn.jmw.processor.datasource.ConnectionStringStrategy;
+import com.cn.jmw.processor.datasource.GeneratedConnectionStringStrategy;
 import com.cn.jmw.processor.datasource.enums.DatabaseEnum;
-import com.cn.jmw.processor.datasource.jdbc.dialect.SQLQueryBuilder;
-import com.cn.jmw.processor.datasource.pojo.JDBCAdapterDataSourceConfig;
-import org.apache.arrow.adbc.core.AdbcException;
+import com.cn.jmw.processor.datasource.jdbc.dialect.SqlQueryBuilder;
+import com.cn.jmw.processor.datasource.pojo.JdbcAdapterDataSourceConfig;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 
 import java.sql.SQLException;
@@ -14,10 +16,9 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.regex.Matcher;
+import java.util.Optional;
 
 import static com.cn.jmw.common.exception.enums.StructuredErrorCodeConstants.RANDOM_SAMPLING_ERROR;
-import static com.cn.jmw.common.exception.enums.StructuredErrorCodeConstants.RANDOM_SAMPLING_NOT_ALLOW_KEYWORD;
 import static com.cn.jmw.common.exception.util.ServiceExceptionUtil.exception;
 
 /**
@@ -25,40 +26,65 @@ import static com.cn.jmw.common.exception.util.ServiceExceptionUtil.exception;
  * <p>
  * 该类扩展了JDBCAdapter，提供了与GaussDB相关的数据库操作。
  * </p>
+ *
+ * @author Jmwang
  */
-public class GaussDBJDBCAdapter extends JDBCAdapter {
+@Slf4j
+public class GaussDbJdbcAdapter extends AbstractJdbcAdapter {
+
     /**
-     * 构造函数用于创建GaussDBJDBCAdapter实例。
+     * 构造函数，初始化适配器实例。
      *
-     * @param hostname     GaussDB服务器的主机名
-     * @param port         GaussDB服务器的端口号
-     * @param databaseName 数据库名称
-     * @param username     用户名
-     * @param password     密码
+     * @param hostname       主机名
+     * @param port           端口号
+     * @param databaseName   数据库名称
+     * @param username       用户名
+     * @param password       密码
+     * @param config         数据源配置
+     * @param connectionUser 连接用户
+     * @param test           是否为测试模式
      */
-    public GaussDBJDBCAdapter(String hostname, Integer port, String databaseName, String username, String password, JDBCAdapterDataSourceConfig config, String connectionUser) {
-        super(hostname, port, databaseName, username, password,config,connectionUser);
+    public GaussDbJdbcAdapter(String hostname, Integer port, String databaseName, String username, String password, JdbcAdapterDataSourceConfig config, String connectionUser, Boolean test, ConnectionStringStrategy strategy) {
+        super(hostname, port, databaseName, username, password, config, connectionUser, test,strategy);
     }
 
-    public GaussDBJDBCAdapter(String hostname, Integer port, String databaseName, String username, String password,JDBCAdapterDataSourceConfig config) {
-        this(hostname, port, databaseName, username, password, config, null);
+    public GaussDbJdbcAdapter(String hostname, Integer port, String databaseName, String username, String password, JdbcAdapterDataSourceConfig config, Boolean test, ConnectionStringStrategy strategy) {
+        this(hostname, port, databaseName, username, password, config, null, test, strategy);
     }
 
-
-    public GaussDBJDBCAdapter(String hostname, Integer port, String databaseName, String username, String password)  {
-        this(hostname, port, databaseName, username, password, new JDBCAdapterDataSourceConfig(), null);
-    }
-
+//    /**
+//     * 构造函数，使用默认连接用户。
+//     */
+//    public GaussDbJdbcAdapter(String hostname, Integer port, String databaseName, String username, String password, JdbcAdapterDataSourceConfig config, Boolean test) {
+//        this(hostname, port, databaseName, username, password, config, null, test, new GeneratedConnectionStringStrategy(null));
+//    }
+//
+//    /**
+//     * 构造函数，使用默认配置。
+//     */
+//    public GaussDbJdbcAdapter(String hostname, Integer port, String databaseName, String username, String password, Boolean test) {
+//        this(hostname, port, databaseName, username, password, new JdbcAdapterDataSourceConfig(), null, test, new GeneratedConnectionStringStrategy(null));
+//    }
 
     /**
-     * 获取GaussDB的连接字符串。
+     * 获取Aliyun RDS的连接字符串。
      *
      * @return 返回连接字符串，包含连接所需的参数
      */
     @Override
     public String getConnectionString() {
-        return "jdbc:postgresql://" + super.hostname + ":" + super.port + "/" + super.databaseName
-                + "?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&autoReconnect=true&nullCatalogMeansCurrent=true";
+        return connectionStringStrategy.getConnectionString(hostname, port, databaseName, config);
+    }
+
+    /**
+     * 获取 GaussDB 的连接字符串。
+     *
+     * @return 包含连接参数的 JDBC 连接字符串
+     */
+    @Override
+    public String generateConnectionString() {
+        return String.format("jdbc:postgresql://%s:%d/%s?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&autoReconnect=true&nullCatalogMeansCurrent=true",
+                hostname, port, databaseName);
     }
 
     /**
@@ -72,51 +98,66 @@ public class GaussDBJDBCAdapter extends JDBCAdapter {
     }
 
     /**
-     * 添加随机采样
-     * <h1>不允许出现 ORDER BY、 LIMIT等字眼</h1>
+     * 添加伪随机抽样逻辑。
+     * <p>
+     * GaussDB 支持 LIMIT OFFSET 实现伪随机抽样。本方法通过计算总数并结合 LIMIT 返回前 m 行数据，不保证随机性。
+     * </p>
      *
-     * @param sqlQueryMontage
-     * @return 增加随机抽样后的SQL
+     * @param sqlQueryMontage SQL 查询组合对象，包含查询构建器和抽样结果
+     * @param n               抽样点（当前未使用）
+     * @param m               抽样数量
+     * @return 包含伪随机抽样逻辑的 SQL 列表
      */
     @Override
-    public List<String> addRandomSampling(SQLQueryMontage sqlQueryMontage, int N, int M){
-        //抽样样本结果
-        SampleResult sampleResult = sqlQueryMontage.getSampleResult();
-        sampleResult.setSample_result("增量");
-        List<String> list = new ArrayList<>();
-        SQLQueryBuilder sqlQueryBuilder = sqlQueryMontage.getSqlQueryBuilders().get(0);
-        if (sqlQueryBuilder==null) {
+    public List<String> addRandomSampling(SqlQueryMontage sqlQueryMontage, int n, int m) {
+        Optional<SampleResult> optionalSampleResult = sqlQueryMontage.getSampleResult();
+        optionalSampleResult.ifPresent(sampleResult -> sampleResult.setSampleMethod("伪随机"));
+
+        // 初始化返回结果
+        List<String> resultList = new ArrayList<>();
+
+        // 获取 SQL 构建器
+        SqlQueryBuilder sqlQueryBuilder = sqlQueryMontage.getSqlQueryBuilders().getFirst();
+        if (sqlQueryBuilder == null) {
             throw exception(RANDOM_SAMPLING_ERROR);
         }
+
+        // 构建原始 SQL
         String sql = sqlQueryBuilder.buildSQL();
-        //首先获取总量
+
+        // 构建查询总数的 SQL
         String countSql = sql.replaceAll("(?i)SELECT\\s+.*?\\s+FROM", "SELECT COUNT(1) FROM");
 
-        sampleResult.setSample_time(LocalDateTime.now());
-        List<Map<String, Object>> countResult = null;
+        // 如果 sampleResult 存在，则设置抽样时间
+        optionalSampleResult.ifPresent(sampleResult -> sampleResult.setSampleTime(LocalDateTime.now()));
+
         try {
-            countResult = executeDMLC(countSql, null);
-            long totalCount = countResult.isEmpty() ? 0 : (Long) countResult.get(0).get("count(1)");
-            // 验证抽样点和前后记录分布一定要小于表的总记录数
-            if (N <= 0 || totalCount == 0 || M <= 0) {
-                sampleResult.setSample_count(0);
-                return list; // 无效参数直接返回
+            // 执行查询获取总数
+            List<Map<String, Object>> countResult = executeDMLC(countSql, null);
+            long totalCount = countResult.isEmpty() ? 0 : (Long) countResult.getFirst().get("count(1)");
+
+            // 检查参数有效性
+            if (n <= 0 || totalCount == 0 || m <= 0) {
+                optionalSampleResult.ifPresent(sampleResult -> sampleResult.setSampleCount(0));
+                return resultList;
             }
 
-            if (totalCount < M) {
-                list.add(sql);
-                sampleResult.setSample_count(totalCount);
-                return list;
+            // 如果总数小于抽样数量 m，则返回完整 SQL
+            if (totalCount < m) {
+                resultList.add(sql);
+                optionalSampleResult.ifPresent(sampleResult -> sampleResult.setSampleCount(totalCount));
+                return resultList;
             }
+
+            // 设置抽样数量
+            optionalSampleResult.ifPresent(sampleResult -> sampleResult.setSampleCount(m));
+            String pseudoSampling = " LIMIT " + m;
+            resultList.add(sql + pseudoSampling);
 
         } catch (SQLException e) {
-            throw new RuntimeException(e);
+            log.error("获取总记录数失败: {}", e.getMessage(), e);
+            return resultList;
         }
-
-        sampleResult.setSample_count(M);
-        String randomSampling = "LIMIT " + M;
-        sql = sql + randomSampling;
-        list.add(sql);
-        return list;
+        return resultList;
     }
 }
