@@ -1,24 +1,22 @@
 package com.cn.jmw.processor.datasource.jdbc.adapter;
 
-import com.cn.jmw.pojo.SQLQueryMontage;
+import com.cn.jmw.pojo.SqlQueryMontage;
 import com.cn.jmw.pojo.SampleResult;
-import com.cn.jmw.processor.datasource.JDBCAdapter;
+import com.cn.jmw.processor.datasource.AbstractJdbcAdapter;
+import com.cn.jmw.processor.datasource.ConnectionStringStrategy;
+import com.cn.jmw.processor.datasource.GeneratedConnectionStringStrategy;
 import com.cn.jmw.processor.datasource.enums.DatabaseEnum;
-import com.cn.jmw.processor.datasource.jdbc.dialect.SQLQueryBuilder;
+import com.cn.jmw.processor.datasource.jdbc.dialect.SqlQueryBuilder;
 import com.cn.jmw.processor.datasource.pojo.ColumnEntity;
 import com.cn.jmw.processor.datasource.pojo.DatabaseEntity;
-import com.cn.jmw.processor.datasource.pojo.JDBCAdapterDataSourceConfig;
+import com.cn.jmw.processor.datasource.pojo.JdbcAdapterDataSourceConfig;
 import com.cn.jmw.processor.datasource.pojo.TableEntity;
-import org.apache.arrow.adbc.core.AdbcException;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 
 import java.sql.*;
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.regex.Matcher;
+import java.util.*;
 
 import static com.cn.jmw.common.exception.enums.StructuredErrorCodeConstants.*;
 import static com.cn.jmw.common.exception.util.ServiceExceptionUtil.exception;
@@ -28,29 +26,49 @@ import static com.cn.jmw.common.exception.util.ServiceExceptionUtil.exception;
  * <p>
  * 该类扩展了JDBCAdapter，提供了与Polar相关的数据库操作。
  * </p>
+ *
+ * @author Jmwang
  */
-public class PolarJDBCAdapter extends JDBCAdapter {
+@Slf4j
+public class PolarJdbcAdapter extends AbstractJdbcAdapter {
+
     /**
-     * 构造函数用于创建PolarJDBCAdapter实例。
+     * 构造函数，初始化适配器实例。
      *
-     * @param hostname     Polar服务器的主机名
-     * @param port         Polar服务器的端口号
-     * @param databaseName 数据库名称
-     * @param username     用户名
-     * @param password     密码
+     * @param hostname       主机名
+     * @param port           端口号
+     * @param databaseName   数据库名称
+     * @param username       用户名
+     * @param password       密码
+     * @param config         数据源配置
+     * @param connectionUser 连接用户
+     * @param test           是否为测试模式
      */
-    public PolarJDBCAdapter(String hostname, Integer port, String databaseName, String username, String password, JDBCAdapterDataSourceConfig config, String connectionUser) {
-        super(hostname, port, databaseName, username, password,config,connectionUser);
+    public PolarJdbcAdapter(String hostname, Integer port, String databaseName, String username, String password, JdbcAdapterDataSourceConfig config, String connectionUser, Boolean test, ConnectionStringStrategy strategy) {
+        super(hostname, port, databaseName, username, password,config,connectionUser,test,strategy);
     }
 
-    public PolarJDBCAdapter(String hostname, Integer port, String databaseName, String username, String password,JDBCAdapterDataSourceConfig config) {
-        this(hostname, port, databaseName, username, password, config, null);
+    public PolarJdbcAdapter(String hostname, Integer port, String databaseName, String username, String password, JdbcAdapterDataSourceConfig config, Boolean test, ConnectionStringStrategy strategy) {
+        this(hostname, port, databaseName, username, password, config, null, test, strategy);
     }
 
-    public PolarJDBCAdapter(String hostname, Integer port, String databaseName, String username, String password)  {
-        this(hostname, port, databaseName, username, password, new JDBCAdapterDataSourceConfig(), null);
-    }
+//    public PolarJdbcAdapter(String hostname, Integer port, String databaseName, String username, String password, JdbcAdapterDataSourceConfig config, Boolean test) {
+//        this(hostname, port, databaseName, username, password, config, null,test, new GeneratedConnectionStringStrategy(null));
+//    }
+//
+//    public PolarJdbcAdapter(String hostname, Integer port, String databaseName, String username, String password, Boolean test)  {
+//        this(hostname, port, databaseName, username, password, new JdbcAdapterDataSourceConfig(), null,test, new GeneratedConnectionStringStrategy(null));
+//    }
 
+    /**
+     * 获取Aliyun RDS的连接字符串。
+     *
+     * @return 返回连接字符串，包含连接所需的参数
+     */
+    @Override
+    public String getConnectionString() {
+        return connectionStringStrategy.getConnectionString(hostname, port, databaseName, config);
+    }
 
     /**
      * 获取Polar的连接字符串。
@@ -58,7 +76,7 @@ public class PolarJDBCAdapter extends JDBCAdapter {
      * @return 返回连接字符串，包含连接所需的参数
      */
     @Override
-    public String getConnectionString() {
+    public String generateConnectionString() {
         return "jdbc:mysql://" + super.hostname + ":" + super.port + "/" + super.databaseName
                 + "?allowMultiQueries=true&useUnicode=true&useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&autoReconnect=true&nullCatalogMeansCurrent=true";
     }
@@ -75,50 +93,69 @@ public class PolarJDBCAdapter extends JDBCAdapter {
 
     /**
      * 添加随机采样
-     * <h1>不允许出现 ORDER BY、 LIMIT等字眼</h1>
+     * <h1>不允许出现 ORDER BY、LIMIT等字眼</h1>
      *
-     * @param sqlQueryMontage
-     * @return 增加随机抽样后的SQL
+     * @param sqlQueryMontage SQL 查询的封装对象
+     * @param n               抽样的数量
+     * @param m               限制的数量
+     * @return 增加随机抽样后的SQL列表
      */
     @Override
-    public List<String> addRandomSampling(SQLQueryMontage sqlQueryMontage, int N, int M){
-        //抽样样本结果
-        SampleResult sampleResult = sqlQueryMontage.getSampleResult();
-        sampleResult.setSample_result("增量");
+    public List<String> addRandomSampling(SqlQueryMontage sqlQueryMontage, int n, int m){
+        // 获取 Optional<SampleResult>
+        Optional<SampleResult> optionalSampleResult = sqlQueryMontage.getSampleResult();
+
+        // 如果 sampleResult 存在，则设置抽样方式为 "增量"
+        optionalSampleResult.ifPresent(sampleResult -> sampleResult.setSampleMethod("增量"));
+
+        // 初始化返回结果
         List<String> list = new ArrayList<>();
-        SQLQueryBuilder sqlQueryBuilder = sqlQueryMontage.getSqlQueryBuilders().get(0);
-        if (sqlQueryBuilder==null) {
+
+        // 获取 SQL 构建器
+        SqlQueryBuilder sqlQueryBuilder = sqlQueryMontage.getSqlQueryBuilders().getFirst();
+        if (sqlQueryBuilder == null) {
             throw exception(RANDOM_SAMPLING_ERROR);
         }
+
+        // 构建原始 SQL
         String sql = sqlQueryBuilder.buildSQL();
+
         //首先获取总量
         String countSql = sql.replaceAll("(?i)SELECT\\s+.*?\\s+FROM", "SELECT COUNT(1) FROM");
 
-        sampleResult.setSample_time(LocalDateTime.now());
-        List<Map<String, Object>> countResult = null;
-        try {
-            countResult = executeDMLC(countSql, null);
-            long totalCount = countResult.isEmpty() ? 0 : (Long) countResult.get(0).get("count(1)");
-            // 验证抽样点和前后记录分布一定要小于表的总记录数
-            if (N <= 0 || totalCount == 0 || M <= 0) {
-                sampleResult.setSample_count(0);
-                return list; // 无效参数直接返回
-            }
+        // 如果 sampleResult 存在，则设置抽样时间
+        optionalSampleResult.ifPresent(sampleResult -> sampleResult.setSampleTime(LocalDateTime.now()));
 
-            if (totalCount < M) {
-                list.add(sql);
-                sampleResult.setSample_count(totalCount);
+        try {
+            // 执行查询获取总数
+            List<Map<String, Object>> countResult = executeDMLC(countSql, null);
+            long totalCount = countResult.isEmpty() ? 0 : (Long) countResult.getFirst().get("count(1)");
+
+            // 检查参数有效性
+            if (n <= 0 || totalCount == 0 || m <= 0) {
+                optionalSampleResult.ifPresent(sampleResult -> sampleResult.setSampleCount(0));
                 return list;
             }
 
+            // 如果总数小于抽样数量 m，则返回完整 SQL
+            if (totalCount < m) {
+                list.add(sql);
+                optionalSampleResult.ifPresent(sampleResult -> sampleResult.setSampleCount(totalCount));
+                return list;
+            }
+
+            // 设置抽样数量
+            optionalSampleResult.ifPresent(sampleResult -> sampleResult.setSampleCount(m));
+
+            // 构建随机抽样 SQL
+            String randomSampling = "LIMIT " + m;
+            sql = sql + randomSampling;
+            list.add(sql);
         } catch (SQLException e) {
-            throw new RuntimeException(e);
+            log.error("获取总记录数失败: {}", e.getMessage(), e);
+            throw new RuntimeException("获取总记录数失败", e);
         }
 
-        sampleResult.setSample_count(M);
-        String randomSampling = "LIMIT " + M;
-        sql = sql + randomSampling;
-        list.add(sql);
         return list;
     }
 
@@ -131,13 +168,13 @@ public class PolarJDBCAdapter extends JDBCAdapter {
      * 获取数据库元数据信息。
      *
      * @return 数据库实体列表，包含数据库中的表信息
-     * @throws SQLException 如果无法检索数据库元数据，将抛出异常
      */
     @Override
     public List<DatabaseEntity> getDatabaseMetadata(String dbName) {
         List<DatabaseEntity> databaseEntities = new ArrayList<>();
-        List<String> ignoreDatabases = getIgnoreDatabaseList(); // 获取需要忽略的数据库列表
-        try (Connection connection = pool.getConnection(hostname + port + databaseName,config,connectionUser)) {
+        // 获取需要忽略的数据库列表
+        List<String> ignoreDatabases = getIgnoreDatabaseList();
+        try (Connection connection = pool.getConnection(hostname + port + databaseName + username + password,config,connectionUser)) {
             DatabaseMetaData metaData = connection.getMetaData();
             try (ResultSet catalogs = metaData.getCatalogs()) {
                 while (catalogs.next()) {
@@ -153,7 +190,7 @@ public class PolarJDBCAdapter extends JDBCAdapter {
                     databaseEntity.setDatabaseName(databaseName);
                     // 存入DatabaseType
                     databaseEntity.setDatabaseEnum(getDatabaseType());
-                    Map<String, TableEntity> tableEntities = new HashMap<>();
+                    Map<String, TableEntity> tableEntities = new HashMap<>(16);
                     try (ResultSet tables = metaData.getTables(databaseName, null, "%", new String[]{"TABLE"})) {
                         while (tables.next()) {
                             String tableName = tables.getString("TABLE_NAME");
@@ -163,19 +200,27 @@ public class PolarJDBCAdapter extends JDBCAdapter {
 
                             TableEntity tableEntity = new TableEntity();
                             tableEntity.setTableName(tableName);
-                            tableEntity.setTableComment(tables.getString("REMARKS")); // 获取表注释
-                            Map<String, ColumnEntity> columnEntities = new HashMap<>();
+                            // 获取表注释
+                            tableEntity.setTableComment(tables.getString("REMARKS"));
+                            Map<String, ColumnEntity> columnEntities = new HashMap<>(16);
                             try (ResultSet cols = metaData.getColumns(databaseName, null, tableName, "%")) {
                                 while (cols.next()) {
                                     ColumnEntity columnEntity = new ColumnEntity();
                                     String TYPE_NAME = cols.getString("TYPE_NAME");
-                                    columnEntity.setColumnName(cols.getString("COLUMN_NAME")); // 获取列名
-                                    columnEntity.setColumnType(cols.getString("TYPE_NAME")); // 获取列类型
-                                    columnEntity.setColumnSize(cols.getInt("COLUMN_SIZE")); // 获取列大小
-                                    columnEntity.setNullable(cols.getInt("NULLABLE") == DatabaseMetaData.columnNullable); // 获取可否为NULL
-                                    columnEntity.setDefaultValue(cols.getString("COLUMN_DEF")); // 获取默认值
-                                    columnEntity.setAutoIncrement("YES".equals(cols.getString("IS_AUTOINCREMENT"))?1:0); // 获取自增状态
-                                    columnEntity.setColumnComment(cols.getString("REMARKS")); // 获取列注释
+                                    // 获取列名
+                                    columnEntity.setColumnName(cols.getString("COLUMN_NAME"));
+                                    // 获取列类型
+                                    columnEntity.setColumnType(cols.getString("TYPE_NAME"));
+                                    // 获取列大小
+                                    columnEntity.setColumnSize(cols.getInt("COLUMN_SIZE"));
+                                    // 获取可否为NULL
+                                    columnEntity.setNullable(cols.getInt("NULLABLE") == DatabaseMetaData.columnNullable);
+                                    // 获取默认值
+                                    columnEntity.setDefaultValue(cols.getString("COLUMN_DEF"));
+                                    // 获取自增状态
+                                    columnEntity.setAutoIncrement("YES".equals(cols.getString("IS_AUTOINCREMENT"))?1:0);
+                                    // 获取列注释
+                                    columnEntity.setColumnComment(cols.getString("REMARKS"));
 
                                     // 判断是什么类型的TYPE_NAME
                                     columnEntity.setType(getColumnType(TYPE_NAME));
@@ -185,26 +230,29 @@ public class PolarJDBCAdapter extends JDBCAdapter {
                                         columnEntity.setIsIndex(1);
                                         Map<String, Object> indexDetails = indexInfo.get(columnEntity.getColumnName());
                                         if ("PRIMARY".equals(indexDetails.get("INDEX_NAME"))) {
-                                            columnEntity.setIsPrimaryKey(1); // 设置为主键
+                                            // 设置为主键
+                                            columnEntity.setIsPrimaryKey(1);
                                         }
                                     }
 
                                     columnEntities.put(columnEntity.getColumnName(), columnEntity);
                                 }
                             }
-                            tableEntity.setColumns(columnEntities); // 设置表的列信息
+                            // 设置表的列信息
+                            tableEntity.setColumns(columnEntities);
                             tableEntities.put(tableName, tableEntity);
                         }
                     }
-                    databaseEntity.setTables(tableEntities); // 设置数据库中的表信息
+                    // 设置数据库中的表信息
+                    databaseEntity.setTables(tableEntities);
                     databaseEntities.add(databaseEntity);
                 }
             }
         } catch (SQLException e) {
-            e.printStackTrace();
-            throw exception(UNABLE_TO_RETRIEVE_DATABASE_METADATA); // 抛出无法检索数据库元数据的异常
+            log.error("获取数据库元数据信息失败", e);
+            throw exception(UNABLE_TO_RETRIEVE_DATABASE_METADATA);
         }
-        return databaseEntities; // 返回数据库实体列表
+        return databaseEntities;
     }
 
     /**
@@ -216,12 +264,12 @@ public class PolarJDBCAdapter extends JDBCAdapter {
      */
     @Override
     public Map<String, Map<String, Object>> getIndexInfo(Connection connection,String dbName, String tableName) {
-        Map<String, Map<String, Object>> hashMap = new HashMap<>();
+        Map<String, Map<String, Object>> hashMap = new HashMap<>(16);
         String sql = "SELECT * FROM INFORMATION_SCHEMA.STATISTICS WHERE TABLE_SCHEMA = '" + dbName + "' AND TABLE_NAME = '" + tableName + "'";
         try (PreparedStatement statement = connection.prepareStatement(sql, ResultSet.TYPE_FORWARD_ONLY, ResultSet.CONCUR_READ_ONLY)) {
             ResultSet resultSet = statement.executeQuery();
             while (resultSet.next()) {
-                Map<String, Object> map = new HashMap<>();
+                Map<String, Object> map = new HashMap<>(16);
                 String COLUMN_NAME = resultSet.getString("COLUMN_NAME");
                 map.put("TABLE_SCHEMA", resultSet.getString("TABLE_SCHEMA"));
                 map.put("TABLE_NAME", resultSet.getString("TABLE_NAME"));
@@ -236,36 +284,31 @@ public class PolarJDBCAdapter extends JDBCAdapter {
                 map.put("INDEX_TYPE", resultSet.getString("INDEX_TYPE"));
                 map.put("COMMENT", resultSet.getString("COMMENT"));
                 map.put("INDEX_COMMENT", resultSet.getString("INDEX_COMMENT"));
-                if (map.size() == 0) {
-                    continue;
-                }
                 hashMap.put(COLUMN_NAME, map);
             }
         } catch (SQLException e) {
-            e.printStackTrace();
+            log.error("获取索引信息失败", e);
             throw exception(INDEX_INFO_GET_ERROR);
         }
         return hashMap;
     }
 
     /**
-     * 1字符串 2数字 0时间
+     * 判断输入的字符串名称是什么类型的数据字段。
      *
-     * 判断输入的字符串名称是什么类型的数据字段
+     * @param columnType 列的数据类型
+     * @return 返回字段类型：1-字符串，2-数字，0-时间，3-其他
      */
     public int getColumnType(String columnType) {
-        if ("CHAR".equals(columnType) || "VARCHAR".equals(columnType) ||
-                "TEXT".equals(columnType)) {
-            return 1;
-        } else if ("MEDIUMINT".equals(columnType) || "INT".equals(columnType)
-                || "BIGINT".equals(columnType)) {
-            return 2;
-        } else if ("DATE".equals(columnType) || "TIME".equals(columnType) ||
-                "DATETIME".equals(columnType)
-                || "YEAR".equals(columnType)) {
-            return 0;
-        }
-
-        return 3;
+        return switch (columnType.toUpperCase()) {
+            // 字符串类型
+            case "CHAR", "VARCHAR", "TEXT" -> 1;
+            // 数字类型
+            case "MEDIUMINT", "INT", "BIGINT" -> 2;
+            // 时间类型
+            case "DATE", "TIME", "DATETIME", "YEAR" -> 0;
+            // 其他类型
+            default -> 3;
+        };
     }
 }
