@@ -1,15 +1,17 @@
 package com.cn.jmw.processor.datasource.jdbc.adapter;
 
-import com.cn.jmw.pojo.SQLQueryMontage;
+import com.cn.jmw.pojo.SqlQueryMontage;
 import com.cn.jmw.pojo.SampleResult;
-import com.cn.jmw.processor.datasource.JDBCAdapter;
+import com.cn.jmw.processor.datasource.AbstractJdbcAdapter;
+import com.cn.jmw.processor.datasource.ConnectionStringStrategy;
+import com.cn.jmw.processor.datasource.GeneratedConnectionStringStrategy;
 import com.cn.jmw.processor.datasource.enums.DatabaseEnum;
-import com.cn.jmw.processor.datasource.jdbc.dialect.SQLQueryBuilder;
+import com.cn.jmw.processor.datasource.jdbc.dialect.SqlQueryBuilder;
 import com.cn.jmw.processor.datasource.pojo.ColumnEntity;
 import com.cn.jmw.processor.datasource.pojo.DatabaseEntity;
-import com.cn.jmw.processor.datasource.pojo.JDBCAdapterDataSourceConfig;
+import com.cn.jmw.processor.datasource.pojo.JdbcAdapterDataSourceConfig;
 import com.cn.jmw.processor.datasource.pojo.TableEntity;
-import org.apache.arrow.adbc.core.AdbcException;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 
 import java.sql.Connection;
@@ -28,30 +30,49 @@ import static com.cn.jmw.common.exception.util.ServiceExceptionUtil.exception;
  * <p>
  * 该类扩展了JDBCAdapter，提供了与PostgreSQL相关的数据库操作。
  * </p>
+ *
+ * @author Jmwang
  */
-public class PostgreSQLJDBCAdapter extends JDBCAdapter {
+@Slf4j
+public class PostgreSqlJdbcAdapter extends AbstractJdbcAdapter {
 
     /**
-     * 构造函数用于创建PostgreSQLJDBCAdapter实例。
+     * 构造函数，初始化适配器实例。
      *
-     * @param hostname     PostgreSQL服务器的主机名
-     * @param port         PostgreSQL服务器的端口号
-     * @param databaseName 数据库名称
-     * @param username     用户名
-     * @param password     密码
+     * @param hostname       主机名
+     * @param port           端口号
+     * @param databaseName   数据库名称
+     * @param username       用户名
+     * @param password       密码
+     * @param config         数据源配置
+     * @param connectionUser 连接用户
+     * @param test           是否为测试模式
      */
-    public PostgreSQLJDBCAdapter(String hostname, Integer port, String databaseName, String username, String password, JDBCAdapterDataSourceConfig config, String connectionUser) {
-        super(hostname, port, databaseName, username, password,config,connectionUser);
+    public PostgreSqlJdbcAdapter(String hostname, Integer port, String databaseName, String username, String password, JdbcAdapterDataSourceConfig config, String connectionUser, Boolean test, ConnectionStringStrategy strategy) {
+        super(hostname, port, databaseName, username, password,config,connectionUser,test,strategy);
     }
 
-    public PostgreSQLJDBCAdapter(String hostname, Integer port, String databaseName, String username, String password,JDBCAdapterDataSourceConfig config) {
-        this(hostname, port, databaseName, username, password, config, null);
+    public PostgreSqlJdbcAdapter(String hostname, Integer port, String databaseName, String username, String password, JdbcAdapterDataSourceConfig config, Boolean test, ConnectionStringStrategy strategy) {
+        this(hostname, port, databaseName, username, password, config, null, test, strategy);
     }
 
-    public PostgreSQLJDBCAdapter(String hostname, Integer port, String databaseName, String username, String password)  {
-        this(hostname, port, databaseName, username, password, new JDBCAdapterDataSourceConfig(), null);
-    }
+//    public PostgreSqlJdbcAdapter(String hostname, Integer port, String databaseName, String username, String password, JdbcAdapterDataSourceConfig config, Boolean test) {
+//        this(hostname, port, databaseName, username, password, config, null,test, new GeneratedConnectionStringStrategy(null));
+//    }
+//
+//    public PostgreSqlJdbcAdapter(String hostname, Integer port, String databaseName, String username, String password, Boolean test)  {
+//        this(hostname, port, databaseName, username, password, new JdbcAdapterDataSourceConfig(), null,test, new GeneratedConnectionStringStrategy(null));
+//    }
 
+    /**
+     * 获取Aliyun RDS的连接字符串。
+     *
+     * @return 返回连接字符串，包含连接所需的参数
+     */
+    @Override
+    public String getConnectionString() {
+        return connectionStringStrategy.getConnectionString(hostname, port, databaseName, config);
+    }
 
     /**
      * 获取PostgreSQL的连接字符串。
@@ -59,7 +80,7 @@ public class PostgreSQLJDBCAdapter extends JDBCAdapter {
      * @return 返回连接字符串，包含连接所需的参数
      */
     @Override
-    public String getConnectionString() {
+    public String generateConnectionString() {
         return "jdbc:postgresql://" + super.hostname + ":" + super.port + "/" + super.databaseName
                 + "?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&autoReconnect=true&nullCatalogMeansCurrent=true";
     }
@@ -86,26 +107,37 @@ public class PostgreSQLJDBCAdapter extends JDBCAdapter {
 
     /**
      * 添加随机采样
-     * <h1>不允许出现 ORDER BY、 LIMIT等字眼</h1>
+     * <h1>不允许出现 ORDER BY、LIMIT等字眼</h1>
      *
-     * @param sqlQueryMontage
-     * @return 增加随机抽样后的SQL
+     * @param sqlQueryMontage SQL 查询的封装对象
+     * @param n               抽样的数量
+     * @param m               限制的数量
+     * @return 增加随机抽样后的SQL列表
      */
     @Override
-    public List<String> addRandomSampling(SQLQueryMontage sqlQueryMontage, int N, int M){
-        //抽样样本结果
-        SampleResult sampleResult = sqlQueryMontage.getSampleResult();
-        sampleResult.setSample_result("增量");
+    public List<String> addRandomSampling(SqlQueryMontage sqlQueryMontage, int n, int m){
+        // 获取 Optional<SampleResult>
+        Optional<SampleResult> optionalSampleResult = sqlQueryMontage.getSampleResult();
+
+        // 如果 sampleResult 存在，则设置抽样方式为 "增量"
+        optionalSampleResult.ifPresent(sampleResult -> sampleResult.setSampleMethod("增量"));
+
+        // 初始化返回结果
         List<String> list = new ArrayList<>();
-        SQLQueryBuilder sqlQueryBuilder = sqlQueryMontage.getSqlQueryBuilders().get(0);
-        if (sqlQueryBuilder==null) {
+
+        // 获取 SQL 构建器
+        SqlQueryBuilder sqlQueryBuilder = sqlQueryMontage.getSqlQueryBuilders().getFirst();
+        if (sqlQueryBuilder == null) {
             throw exception(RANDOM_SAMPLING_ERROR);
         }
+
+        // 构建原始 SQL
         String sql = sqlQueryBuilder.buildSQL().replaceAll("`","").replaceAll("[()]","");
+
         if (StringUtils.isBlank(sql)){
             throw exception(RANDOM_SAMPLING_ERROR);
         }
-        Matcher matcher = RandomSamplingCompile.matcher(sql);
+        Matcher matcher = RANDOM_SAMPLING_COMPILE.matcher(sql);
         if (matcher.find()){
             throw exception(RANDOM_SAMPLING_NOT_ALLOW_KEYWORD);
         }
@@ -113,33 +145,44 @@ public class PostgreSQLJDBCAdapter extends JDBCAdapter {
         //获取COUNT总量
         //sql替换FROM之前的变成SELECT COUNT(1)
         String countSql = sql.replaceAll("(?i)SELECT\\s+.*?\\s+FROM", "SELECT COUNT(1) FROM");
-        //执行COUNT
-        sampleResult.setSample_time(LocalDateTime.now());
-        List<Map<String, Object>> countResult = null;
-        try {
-            countResult = executeDMLC(countSql, null);
-            long totalCount = countResult.isEmpty() ? 0 : (Long) countResult.get(0).get("count(1)");
-            // 验证抽样点和前后记录分布一定要小于表的总记录数
-            if (N <= 0 || totalCount == 0 || M <= 0) {
-                sampleResult.setSample_count(0);
-                return list; // 无效参数直接返回
-            }
 
-            if (totalCount < M) {
-                list.add(sql);
-                sampleResult.setSample_count(totalCount);
+        // 如果 sampleResult 存在，则设置抽样时间
+        optionalSampleResult.ifPresent(sampleResult -> sampleResult.setSampleTime(LocalDateTime.now()));
+
+        try {
+            // 执行查询获取总数
+            List<Map<String, Object>> countResult = executeDMLC(countSql, null);
+            long totalCount = countResult.isEmpty() ? 0 : (Long) countResult.getFirst().get("count(1)");
+
+            // 检查参数有效性
+            if (n <= 0 || totalCount == 0 || m <= 0) {
+                optionalSampleResult.ifPresent(sampleResult -> sampleResult.setSampleCount(0));
                 return list;
             }
-        } catch (SQLException e) {
-            throw new RuntimeException(e);
-        }
-        long totalCount = countResult.isEmpty() ? 0 : (Long) countResult.get(0).get("count");
-        //totalCount和(N*M*2)的百分比
-        double percent = totalCount<(N * M * 2)?1.0:(N * M * 2) * 1.0 / totalCount;
 
-        String randomSampling = " TABLESAMPLE SYSTEM ("+(percent*100)+")";
-        sql = sql + randomSampling;
-        list.add(sql);
+            // 如果总数小于抽样数量 m，则返回完整 SQL
+            if (totalCount < m) {
+                list.add(sql);
+                optionalSampleResult.ifPresent(sampleResult -> sampleResult.setSampleCount(totalCount));
+                return list;
+            }
+
+            // 设置抽样数量
+            optionalSampleResult.ifPresent(sampleResult -> sampleResult.setSampleCount(m));
+
+            //totalCount和(N*M*2)的百分比
+            double percent = totalCount<((long) n * m * 2)?1.0:(n * m * 2) * 1.0 / totalCount;
+
+            // 构建随机抽样 SQL
+            String randomSampling = " TABLESAMPLE SYSTEM ("+(percent*100)+")";
+            sql = sql + randomSampling;
+            list.add(sql);
+
+        } catch (SQLException e) {
+            log.error("获取总记录数失败: {}", e.getMessage(), e);
+            throw new RuntimeException("获取总记录数失败", e);
+        }
+
         return list;
     }
 
@@ -152,14 +195,14 @@ public class PostgreSQLJDBCAdapter extends JDBCAdapter {
      * 获取数据库元数据信息。
      *
      * @return 数据库实体列表，包含数据库中的表信息
-     * @throws SQLException 如果无法检索数据库元数据，将抛出异常
      */
     @Override
     public List<DatabaseEntity> getDatabaseMetadata(String dbName) {
         List<DatabaseEntity> databaseEntities = new ArrayList<>();
-        List<String> ignoreDatabases = getIgnoreDatabaseList(); // 获取需要忽略的数据库列表
+        // 获取需要忽略的数据库列表
+        List<String> ignoreDatabases = getIgnoreDatabaseList();
 
-        try (Connection connection = pool.getConnection(hostname + port + databaseName,config,connectionUser)) {
+        try (Connection connection = pool.getConnection(hostname + port + databaseName + username + password,config,connectionUser)) {
             DatabaseMetaData metaData = connection.getMetaData();
 
             // PostgreSQL 使用 getSchemas() 来获取 Schema 列表
@@ -179,7 +222,7 @@ public class PostgreSQLJDBCAdapter extends JDBCAdapter {
                     databaseEntity.setDatabaseName(schemaName);
                     databaseEntity.setDatabaseEnum(getDatabaseType());
 
-                    Map<String, TableEntity> tableEntities = new HashMap<>();
+                    Map<String, TableEntity> tableEntities = new HashMap<>(16);
 
                     // 通过 Schema 获取表信息
                     try (ResultSet tables = metaData.getTables(null, schemaName, "%", new String[]{"TABLE"})) {
@@ -188,21 +231,29 @@ public class PostgreSQLJDBCAdapter extends JDBCAdapter {
 
                             TableEntity tableEntity = new TableEntity();
                             tableEntity.setTableName(tableName);
-                            tableEntity.setTableComment(tables.getString("REMARKS")); // 获取表注释
+                            // 获取表注释
+                            tableEntity.setTableComment(tables.getString("REMARKS"));
 
-                            Map<String, ColumnEntity> columnEntities = new HashMap<>();
+                            Map<String, ColumnEntity> columnEntities = new HashMap<>(16);
 
                             // 获取表的列信息
                             try (ResultSet cols = metaData.getColumns(null, schemaName, tableName, "%")) {
                                 while (cols.next()) {
                                     ColumnEntity columnEntity = new ColumnEntity();
-                                    columnEntity.setColumnName(cols.getString("COLUMN_NAME")); // 列名
-                                    columnEntity.setColumnType(cols.getString("TYPE_NAME"));   // 列类型
-                                    columnEntity.setColumnSize(cols.getInt("COLUMN_SIZE"));    // 列大小
-                                    columnEntity.setNullable(cols.getInt("NULLABLE") == DatabaseMetaData.columnNullable); // 是否可为空
-                                    columnEntity.setDefaultValue(cols.getString("COLUMN_DEF")); // 默认值
-                                    columnEntity.setAutoIncrement("YES".equals(cols.getString("IS_AUTOINCREMENT")) ? 1 : 0); // 是否自增
-                                    columnEntity.setColumnComment(cols.getString("REMARKS")); // 获取字段注释
+                                    // 列名
+                                    columnEntity.setColumnName(cols.getString("COLUMN_NAME"));
+                                    // 列类型
+                                    columnEntity.setColumnType(cols.getString("TYPE_NAME"));
+                                    // 列大小
+                                    columnEntity.setColumnSize(cols.getInt("COLUMN_SIZE"));
+                                    // 是否可为空
+                                    columnEntity.setNullable(cols.getInt("NULLABLE") == DatabaseMetaData.columnNullable);
+                                    // 默认值
+                                    columnEntity.setDefaultValue(cols.getString("COLUMN_DEF"));
+                                    // 是否自增
+                                    columnEntity.setAutoIncrement("YES".equals(cols.getString("IS_AUTOINCREMENT")) ? 1 : 0);
+                                    // 获取字段注释
+                                    columnEntity.setColumnComment(cols.getString("REMARKS"));
 
                                     columnEntities.put(columnEntity.getColumnName(), columnEntity);
                                 }
@@ -216,7 +267,7 @@ public class PostgreSQLJDBCAdapter extends JDBCAdapter {
                 }
             }
         } catch (SQLException e) {
-            e.printStackTrace();
+            log.error("无法检索数据库元数据", e);
             throw new RuntimeException("Unable to retrieve database metadata", e);
         }
 
